# source-sextant

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  NOTICE  README.md  SKILL.md  init-fledgling-analyst.sql  init-fledgling-core.sql  init-fledgling.sql  init-source-sextant.sql  mkdocs.yml  pyproject.toml
.lq/: commands.toml  config.toml
config/: claude-code.example.json
docs/: getting-started.md  index.html  index.md  product-thinking.md
docs/blog/: actor-taxonomy.md  blog-series-intro.md  conversations-as-closures.md  formal-framework.md  ma-critique.md  primer-kleisli-graded-pi.md  scope-transitions.md  turn-anatomy.md
docs/macros/: conversations.md  docs.md
docs/planning/: NEXT_STEPS.md
docs/tasks/: P2-001-files-tools.md  P2-002-code-tools.md  P2-003-docs-tools.md  P2-004-git-tools.md  P2-005-init-and-config.md  P2-006-fledgling-mvp.md  P2-007-profile-integration.md  P2-009-mcp-path-resolution.md  P3-001-git-diff.md  P3-002-git-status.md  P3-003-git-show.md  P3-004-git-tags.md  P3-005-project-overview.md  P3-006-packaging.md  P3-007-claude-conversations.md  P3-009-structural-diff.md
docs/vision/: CONVERSATION_ANALYSIS.md  CONVERSATION_SCHEMA_DESIGN.md  PRODUCT_SPEC.md
fledgling/: connection.py
fledgling/pro/: __init__.py
init/: init-fledgling-analyst.sql  init-fledgling-base.sql  init-fledgling-conversations.sql  init-fledgling-core.sql  init-fledgling.sql
scripts/: call_tool.py
sql/: code.sql  conversations.sql  docs.sql  dr_fledgling.sql  fts.sql  help.sql  install-fledgling.sql  repo.sql  sandbox.sql  source.sql  structural.sql  workflows.sql
sql/profiles/: analyst.sql  core.sql
sql/tools/: code.sql  conversations.sql  docs.sql  files.sql  git.sql  help.sql  structural.sql
tests/: conftest.py  test_conversations.py  test_docs.py  test_dr_fledgling.py  test_fts_collections.py  test_help.py  test_installer.py  test_mcp_conversations.py  test_mcp_server.py  test_repo.py  test_sandbox.py  test_source.py  test_structural.py
tests/data/validation-prompts/: 01-files.md  02-code.md  03-docs.md  04-git.md  05-conversations.md  06-help.md  07-analyst.md  08-integration.md  README.md
