[project]
name = "fledgling"
version = "0.1.0"
description = "MCP tools that help AI agents get their bearings in a codebase — unified SQL views over code, git, docs, and conversations, powered by DuckDB."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["duckdb", "mcp", "ai-agents", "code-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/teaguesterling/source-sextant"
Documentation = "https://source-sextant.readthedocs.io"
Repository = "https://github.com/teaguesterling/source-sextant"
Issues = "https://github.com/teaguesterling/source-sextant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
test = [
    "duckdb>=1.4.4",
    "pytest>=7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]
