[project]
name = "fledgling-mcp"
version = "0.9.0"
description = "MCP tools that help AI agents get their bearings in a codebase — unified SQL views over code, git, docs, and conversations, powered by DuckDB."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["duckdb", "mcp", "ai-agents", "code-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "duckdb>=1.5.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]

[project.scripts]
fledgling = "fledgling.cli:main"
fledgling-mcp = "fledgling.cli:mcp_main"

[project.urls]
Homepage = "https://github.com/teaguesterling/fledgling"
Documentation = "https://fledgling.readthedocs.io"
"SQL Builder" = "https://teaguesterling.github.io/fledgling/"
Repository = "https://github.com/teaguesterling/fledgling"
Issues = "https://github.com/teaguesterling/fledgling/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fledgling"]

[tool.hatch.build.targets.wheel.force-include]
"sql" = "fledgling/sql"
"init" = "fledgling/init"
"bin/fledgling-cli" = "fledgling/bin/fledgling-cli"
"SKILL.md" = "fledgling/SKILL.md"
"skills" = "fledgling/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
test = [
    "duckdb>=1.5.0",
    "pytest>=7.0",
]
